--- a/helm/console/values.yaml
+++ b/helm/console/values.yaml
@@ -88,7 +88,14 @@ affinity: {}
 console:
   # Config.yaml is required for Console
   # See reference config: https://github.com/redpanda-data/console/blob/master/docs/config/console.yaml)
-  config: {}
+  config:
+    kafka:
+      brokers:
+        - redpanda:9093
+      schemaRegistry:
+        enabled: true
+        urls: ["http://redpanda:8081"]
+
   # roles:
   # roleBindings:
 
